--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,12 @@ font-family: cursive;
 }
 h4{
   font-family: 'Inconsolata', monospace;
+}
+
+#form{
+  margin: 0px;
+}
+#mk3{
+  text-align: center;
+  font-size: 20px;
+}
