--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,13 @@ body{
   margin: 25px;
   padding-right: 20px
 }
+
+input{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
