--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,13 @@ input{
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+.tex{
+  border: 10px;
+  border-radius: 20px;
+  height: 600px;
+  background-color: #808080;
+  float: right;
+  padding: 50px;
+margin-right: 20px;
+}
