--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 h1{
 text-align: center;
 font-style: italic;
-font-family: cursive;
+font-family:inherit;
 }
 h4{
   font-family: 'Inconsolata', monospace;
